BABU-56 fixed: login and register eye alignment

--- a/apps/static/assets/css/babu.css
+++ b/apps/static/assets/css/babu.css
@@ -2869,6 +2869,8 @@ textarea.form-control-lg {
   z-index: 3;
 }
 
+/* Input-group-text */
+
 .input-group-text {
   display: flex;
   align-items: center;
@@ -22983,10 +22985,22 @@ pre[class*=language-] {
   align-items: center;
   border: 1px solid #000;
   border-radius: 30px;
-  padding: 20px 20px;
   font-family: Arial, sans-serif;
   width: 100%;
 
+}
+
+.custom-input {
+  border: none;
+  border-bottom: none;
+  outline: none;
+  padding: 20px 20px;
+  background-color: transparent;
+  width: 90%;
+}
+
+.custom-input:focus {
+  border-bottom-color: #007bff;
 }
 
 .input-label {
